apps/cluster-core/traefik/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-internal
  namespace: traefik
  labels:
    pool: internal-traefik-lb-pool
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: "traefik"
  externalTrafficPolicy: Local
  trafficDistribution: PreferSameNode # 1.35 feature
  ports:
    - name: websecure
      port: 443
      targetPort: 9443
      protocol: TCP
    - name: websecure-http3
      port: 443
      targetPort: 9443
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dmz
  namespace: traefik
  labels:
    pool: traefik-dmz-pool
spec:
  type: LoadBalancer
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv6
    - IPv4
  selector:
    app.kubernetes.io/name: "traefik"
  externalTrafficPolicy: Local
  trafficDistribution: PreferSameNode # 1.35 feature
  ports:
    - name: dmz
      port: 443
      targetPort: 8443
      protocol: TCP
    - name: dmz-http3
      port: 443
      targetPort: 8443
      protocol: UDP
