apps/cluster-core/traefik/network-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cnp-traefik-perimeter"
  namespace: "traefik"
spec:
  description: "Allows external traffic to Traefik (80/443) and allows Traefik to talk to k8s API and backend services."
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  
  ingress:
    # Rule 1: Allow public internet to ports 80/443
    - fromEntities:
        - "world"
      toPorts:
        - ports:
            # === Internal websecure entrypoint ===
            - port: "9443"
              protocol: "TCP"
            - port: "9443"
              protocol: "TCP"
            # === DMZ entrypoint ===
            - port: "8443"
              protocol: "UDP"
            - port: "8443"
              protocol: "TCP"
  
  
  egress:
    # Rule 1: Allow Traefik to talk to kube-apiserver
    - toEntities:
        - "kube-apiserver"
        - "cluster"
